tests/NormalTests/paczka1/small_fuzzy/27209601.err
Error in line 1: GFNxEzuPFuI S135 73,4
Error in line 4: UVBLhLQLVg A60 79,5
Error in line 12: 2WJosP3m S135 8,7
